benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExp_Add_DivMod_Zeroes_iter3_error.log
=== Verification Error - Iteration 3 ===
File: benchmarks/verus/bignum/files/bignum_ModExp_Add_DivMod_Zeroes.rs
Time: 2025-09-15 10:54:57

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_Zeroes_impl.rs:68:17
   |
68 |         Str2Int(result@) == x as nat,
   |                 ^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_Zeroes_impl.rs:68:17
   |
68 |         Str2Int(result@) == x as nat,
   |                 ^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
